--- a/templates/base.html
+++ b/templates/base.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
 <head>
     <meta charset="UTF-8">
     <title>Chatbot</title>
 </head>
 <body>
-<div class="container">
+<div class="containerr">
+    <div id="mySidepanel" class="sidepanel">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <div class="grid container ">
+            <a href=""><h1 id="home">Home</h1></a>
+            <a href=""><h1 id="home">Create</h1></a>
+            <div class="row">
+                <div class="col-3 p-3"><a href=""><img class="itemm"  src="../static/images/card.png" alt="card"> </a></div>
+                <div class="col-3 p-3 "> <a href=""><img class="itemm"  src="../static/images/cloud.png" alt="cloud"></a></div>
+            </div>
+            <div class="row">
+                <div class="col-3 p-3 "><a href=""><img class="itemm"  src="../static/images/photo.png" alt="photo"></a></div>
+                <div class="col-3 p-3 "><a href=""><img class="itemm"  src="../static/images/text.png" alt="text"></a></div>
+            </div>
+            <div class="row">
+                <div class="col-3 p-3 "><a href=""><img class="itemm"  src="../static/images/zip.png" alt="text"></a></div>
+            </div>
+            
+        </div>
+    </div>
+      
+      <button class="openbtn" onclick="openNav()">&#9776;  More</button>
+      
     <div class="chatbox">
         <div class="chatbox__support">
             <div class="chatbox__header">
@@ -34,7 +57,7 @@
 </div>
 
     <script>
-        $SCRIPT_ROOT = {{ request.script_root|tojson }};
+        // $SCRIPT_ROOT = {{ request.script_root|tojson }};
     </script>
     <script type="text/javascript" src="{{ url_for('static', filename='app.js') }}"></script>
 
